[gd_scene load_steps=6 format=3 uid="uid://2sbxeymmsxu"]

[ext_resource type="Script" path="res://scripts/ui/achievements_viewer.gd" id="1_gngyv"]
[ext_resource type="Material" uid="uid://cqn5rkmj7io2i" path="res://shaders/panel_shader_material.tres" id="2_cxh46"]
[ext_resource type="Script" path="res://scripts/ui/nodes/AchvDetailsView.gd" id="3_r5j1s"]

[sub_resource type="Gradient" id="Gradient_1ndba"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_yfome"]
gradient = SubResource("Gradient_1ndba")

[node name="AchievementsLayer" type="CanvasLayer"]
script = ExtResource("1_gngyv")

[node name="PanelContainer" type="PanelContainer" parent="."]
material = ExtResource("2_cxh46")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="AllAchvUnlockedContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="PanelContainer/VBoxContainer/AllAchvUnlockedContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
color = Color(0, 0.266667, 0.666667, 1)

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/AllAchvUnlockedContainer"]
layout_mode = 2
text = "Odblokowałeś wszystkie osiągnięcia! Gratulacje!"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer/MarginContainer"]
clip_contents = false
layout_mode = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="HFlowContainer" type="HFlowContainer" parent="PanelContainer/VBoxContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 24
theme_override_constants/v_separation = 16

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="BackButton" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 4
text = "Powrót"

[node name="AchvDetailsView" type="CanvasLayer" parent="."]
layer = 51
visible = false
script = ExtResource("3_r5j1s")

[node name="PanelContainer" type="Panel" parent="AchvDetailsView"]
material = ExtResource("2_cxh46")
custom_minimum_size = Vector2(800, 300)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -150.0
offset_right = 400.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="AchvDetailsView/PanelContainer"]
layout_mode = 2
offset_right = 800.0
offset_bottom = 303.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="AchvDetailsView/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="AchvDetailsIcon" type="TextureRect" parent="AchvDetailsView/PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("GradientTexture2D_yfome")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="AchvDetailsView/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AchvDetailsTitle" type="Label" parent="AchvDetailsView/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "<AchievementTitle>"

[node name="AchvDetailsDesc" type="Label" parent="AchvDetailsView/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
text = "<AchievementDescription>"
autowrap_mode = 3

[node name="AchvDetailsDate" type="Label" parent="AchvDetailsView/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "<DateUnlocked>"

[node name="CloseButton" type="Button" parent="AchvDetailsView/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Zamknij"

[connection signal="pressed" from="PanelContainer/VBoxContainer/MarginContainer2/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="AchvDetailsView/PanelContainer/MarginContainer/CloseButton" to="AchvDetailsView" method="_on_close_button_pressed"]
